@@ -1,41 +1,0 @@
-[manageiq-16-petrosian]
-name=ManageIQ 16 (Petrosian) Release - $basearch
-baseurl=https://rpm.manageiq.org/release/16-petrosian/el$releasever/$basearch
-enabled=1
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
-
-[manageiq-16-petrosian-noarch]
-name=ManageIQ 16 (Petrosian) Release - noarch
-baseurl=https://rpm.manageiq.org/release/16-petrosian/el$releasever/noarch
-enabled=1
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
-
-[manageiq-16-petrosian-source]
-name=ManageIQ 16 (Petrosian) Release - source
-baseurl=https://rpm.manageiq.org/release/16-petrosian/el$releasever/src
-enabled=0
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
-
-[manageiq-16-petrosian-nightly]
-name=ManageIQ 16 (Petrosian) Nightly - $basearch
-baseurl=https://rpm.manageiq.org/release/16-petrosian-nightly/el$releasever/$basearch
-enabled=0
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
-
-[manageiq-16-petrosian-nightly-noarch]
-name=ManageIQ 16 (Petrosian) Nightly - noarch
-baseurl=https://rpm.manageiq.org/release/16-petrosian-nightly/el$releasever/noarch
-enabled=0
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
-
-[manageiq-16-petrosian-nightly-source]
-name=ManageIQ 16 (Petrosian) Nightly - source
-baseurl=https://rpm.manageiq.org/release/16-petrosian-nightly/el$releasever/src
-enabled=0
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
